fixed: buttons collapsing on small display

--- a/mycss.css
+++ b/mycss.css
@@ -15,10 +15,10 @@ body {
     top: 50%;
 }
 
-.left {
-    left: 43%;
+.no {
+    left: 52%;
 }
 
-.right {
-    right: 43%;
+.yes {
+    right: 52%;
 }
